pulkitchhabra-salesforce/objects/Client_Relation__c.object
<CustomObject>
    <fields>
        <fullName>Advertiser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Advertiser</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>01228000000PK9P</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Agency</relationshipLabel>
        <relationshipName>Client_Relations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency_Contact_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Agency__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Relations</relationshipLabel>
        <relationshipName>Client_Relations_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>01228000000PK9U</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Advertisers</relationshipLabel>
        <relationshipName>Client_Relations1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Client Relation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Relation-{00000}</displayFormat>
        <label>Client Relations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Relations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>